Refactored names of classes using UK spelling to US spelling. Added more tests for jsr297 classes.